add background color-container

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .container{
     width: 100%;
     max-width: 30rem;
-    background: rgb(255, 255, 255, 0.6);
+    background: rgb(214, 212, 212);
     padding: 28px;
     margin: 0 28px;
     border-radius: 10px;
